--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -17,7 +17,7 @@ Old English ''[[sūcan]]''
 #: ''You're great at baseball, but you '''suck''' at golf.''
 # To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
 #: ''Come on, bitch, '''suck''' it.''
-#: You know you want to '''suck''' me '''off'''.''
+#: ''You know you want to '''suck''' me '''off'''.''
 
 ====Synonyms====
 * (3, 4 above) To [[blow]]
