--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -16,7 +16,7 @@
 * [[Afrikaans]]: {{t|af|Verenigde State van Amerika|xs=Afrikaans}}
 * Albanian: [[Shtete e Bashkuara të Amerikës]], [[SHBA]]
 * Arabic: {{Arab|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{Arab|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
-* Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amerikayi Miac'yal Nahangner)
+* Armenian: {{t|hy|Ամերիկայի Միացյալ Նահանգներ|tr=Amerikayi Miac'yal Nahangner|sc=Armn}}
 * [[Azeri]]: [[Amerika Birləşmiş Ştatları]]
 * Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
 * Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
@@ -53,6 +53,7 @@
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
+* Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo}}
 * Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
 * Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
