--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,7 +16,12 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 #: ''Asia is a large continent, with many large nations ('''e.g.''' China, India, and Japan).''
 
 ====Usage notes====
-* The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', The Complete Plain Words, ''Ernest Gowers, Sidney Greenbaum, Janet Whitcut''</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]'' as this is tautology [http://en.wikipedia.org/wiki/Tautology_(rhetoric)]. 
+* The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by {{term|et cetera}} or {{term|etc.}} as this is a [[tautology]].
+
+* Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
+
+* If a comma is used with ''e.g.'', the comma should precede ''e.g.'', not follow it.  
+"I like food, e.g. chocolate.".  (cf. "I like food, for example chocolate.").
 
 * Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
 
