--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -49,6 +49,7 @@ Old English ''[[sūcan]]''
 {{trans-mid}}
 * Kurdish: [[mêjîn]], [[mêtin]], {{ku-Arab|[[مژین]]}}
 * Latin: {{t-|la|fellare}}
+* Lithuanian: {{t|lt|čiulpti|alt=čiul̃pti}}
 * Norwegian: {{t-|no|suge}}
 * Polish: {{t+|pl|ssać}}
 * Portuguese: {{t-|pt|chupar}}, {{t+|pt|sugar}}
