--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -55,6 +55,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Swedish: {{t-|sv|sekreterare|c}}
 * [[Telugu]]: [[కార్యదర్శి]] (kaaryadarSi), [[సహాయకుడు]] (sahaayakuDu)
 * [[Tok Pisin]]: [[sekreteri]]
+* Turkish: {{t|tr|sekreter}}
 * Welsh: {{t|cy|ysgrifenydd|m}},  {{t|cy|ysgrifenyddes|f}}
 {{trans-bottom}}
 
