--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -19,7 +19,7 @@
 # {{intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: ''She’ll be '''coming''' ’round the mountain when she '''comes'''...''
 # {{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To achieve [[orgasm]].
-#: ''He '''came''' after a few minutes.''
+#: ''She '''came''' ’round his mountain.''
 # {{context|copulative}} To [[become]].
 #: ''He was a dream '''come''' true.''
 # {{context|copulative}} To [[turn out]] to be.
