--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -21,7 +21,7 @@
 # {{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To achieve [[orgasm]].
 #: ''She '''came''' ’round his mountain.''
 # {{context|copulative}} To [[become]].
-#: ''He was a dream '''come''' true.''
+#: ''He was a wet dream '''come''' true.''
 # {{context|copulative}} To [[turn out]] to be.
 #: ''They '''came''' close to winning.''
 
