--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -19,9 +19,9 @@
 # {{intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: ''She’ll be '''coming''' ’round the mountain when she '''comes'''...''
 # {{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To achieve [[orgasm]].
-#: ''She '''came''' ’round his mountain.''
+#: ''He '''came''' after a few minutes.''
 # {{context|copulative}} To [[become]].
-#: ''He was a wet dream '''come''' true.''
+#: ''He was a dream '''come''' true.''
 # {{context|copulative}} To [[turn out]] to be.
 #: ''They '''came''' close to winning.''
 
