--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -86,6 +86,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * [[drape]]
 
 [[Category:1000 English basic words]]
+[[Category:Furniture]]
 [[Category:Theater]]
 
 [[ar:curtain]]
