--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -40,7 +40,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
 * Norwegian: {{t+|no|dvs.}}
 * Polish: [[tzn.]] {{i|[[to]] [[znaczy]]}}, [[tj.]] {{i|[[to]] [[jest]]}}
-* Portuguese: [[isto é]]
+* Portuguese: [[isto é]],  {{t|pt|ou seja}}
 * Russian: [[т. е.]] ([[то есть]], ''tó jest’'')
 * Spanish: [[es decir]]
 * Swedish: [[dvs]], [[d v s]], [[d.v.s.]] {{i|[[det]] [[vill]] [[säga]]}}
