--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -163,6 +163,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Korean: {{t-|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
 * Latvian: [[plūme]] {{f}}
+* [[Macedonian]]: {{t+|mk|слива|f|tr=slíva|sc=Cyrl}}
 * [[Middle High German]]: [[pflūme]], [[pfrūme]]
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * [[Old High German]]: [[pfrūma]]
@@ -206,6 +207,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-mid}}
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
 * Latvian: [[plūme]] {{f}}
+*[[Macedonian]]: {{t+|mk|слива|f|tr=slíva|sc=Cyrl}} 
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * Polish: {{t+|pl|śliwa|f}}
 * Portuguese: {{t+|pt|ameixeira|f}}, {{t+|pt|ameixa|f}}
