--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -32,7 +32,7 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 * Finnish: {{t+|fi|aine}}, {{t+|fi|materia}}
 * French: {{t+|fr|substance|f}}
 * German: {{t+|de|Substanz|f}}, {{t+|de|Stoff|m}}
-* Greek: [[ουσία]] (usia) {{f}}
+* Greek: [[ουσία]] (usía) {{f}}
 * Hebrew: {{he-translation|חומר|khómer}} {{m}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
 * Japanese: {{t+|ja|物質|tr=busshitsu|sc=Jpan}}
@@ -53,7 +53,7 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 * Finnish: {{t+|fi|ydin}}, {{t+|fi|substanssi}}
 * French: {{t+|fr|substance|f}}
 * German: {{t+|de|Substanz|f}}
-* Greek: [[ουσιώδης]] (usiodes) {{m}}
+* Greek: [[ουσία]] (usía) {{f}}
 * Hebrew: {{he-translation|תוכן|tókhen}} {{m}}
 * Hungarian: {{t|hu|lényeg}}
 {{trans-mid}}
@@ -69,7 +69,7 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 * Danish: [[indhold]], [[substans]]
 * Dutch: [[kern]], [[essentie]] {{f}}
 * German: {{t+|de|Substanz|f}}
-* Greek: [[ουσία]] (usia) {{f}}
+* Greek: [[ουσία]] (usía) {{f}}
 {{trans-mid}}
 * Hebrew: {{he-translation|מהות|mahút}} {{f}}
 * Norwegian: {{t-|no|essens|m}}, {{t+|no|kjerne|m}}
@@ -94,7 +94,7 @@ From {{etyl|fro}} ''[[#French|substance]]''.
 {{trans-top|drugs}}
 * Finnish: {{t+|fi|aine|alt=aineet}}
 * German: {{t+|de|Substanz|f}}
-* Greek: [[ναρκωτικά]] (narkotika) {{n|p}}, [[ναρκωτικές ουσίες]] (narkotikes usies) {{f|p}}
+* Greek: [[ουσίες]] (usíes) {{f|p}}
 * Norwegian: {{t+|no|narkotika}}
 {{trans-mid}}
 * Polish: {{t-|pl|narkotyk|m}}
