--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -34,6 +34,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 {{trans-mid}}
 * Italian: {{t+|it|icona|f}}
 * Polish: {{t+|pl|ikona|f}}
+* Russian: {{t|ru|икона|f|tr=ikóna|sc=Cyrl}}
 * Serbian:
 *: Cyrillic: [[икона#Serbian|икона]] {{f}}
 *: Latin: [[ikona#Serbian|ikona]] {{f}}
