--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -68,6 +68,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Kannada]]: [[ಇಸ್ರೇಲ್]]
 * [[Kikuyu]]: {{tø|ki|Israel}}
 {{trans-mid}}
+* Korean: {{t|ko|이스라엘|tr=Iseura-el|sc=Kore}}
 * Latvian: {{t-|lv|Izraēla|xs=Latvian}},  {{t|lv|Izraēlas Valsts|xs=Latvian}}
 * Lithuanian: {{t|lt|Izraelis|m|xs=Lithuanian}},  {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
