--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,15 +16,17 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 {{en-adv|-}}
 
 # {{context|[[abbreviation]]|[[initialism]]}} Literally, “for example”.  Used to introduce an [[example]] or list of examples to [[illustrate]] what is being [[discuss]]ed.
-#: ''Asia is a large continent, with many large nations ('''e.g.''' China, India, and Japan).''
+#: ''Asia is a large continent, with many large nations ('''e.g.''', China, India, and Japan).''
 
 ====Usage notes====
 * The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by {{term|et cetera}} or {{term|etc.}} as this is a [[tautology]].
 
 * Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
 
-* If a comma is used with ''e.g.'', the comma should precede ''e.g.'', not follow it:
-:: "I like food, e.g. chocolate."  (cf. "I like food, for example chocolate.")
+* If a comma is used with ''e.g.'', the comma should follow ''e.g.'', not precede it:<ref>https://engineering.purdue.edu/~mark/puthesis/faq/ie-and-eg/
+</ref>
+:: "I like food; e.g., chocolate."  (cf. "I like food; for example, chocolate.")
+
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
