--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -23,10 +23,10 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 
 * Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
 
-* If a comma is used with ''e.g.'', the comma should follow ''e.g.'', not precede it:<ref>https://engineering.purdue.edu/~mark/puthesis/faq/ie-and-eg/
-</ref>
-:: "I like food; e.g., chocolate."  (cf. "I like food; for example, chocolate.")
-
+* If a comma is used with ''e.g.'', the comma should follow ''e.g.'',<ref>https://engineering.purdue.edu/~mark/puthesis/faq/ie-and-eg/
+</ref> although a comma may precede the expression in some cases<ref>''The Chicago Manual of Style'', 15th edition, section 6.44</ref>:
+:: "I like sweet foods, e.g., chocolate."  (cf. "I like sweets foods, for example, chocolate.")
+:: "I like sweet foods (e.g., chocolate and marzpan) and eat them often."
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
