--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -28,6 +28,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * German: {{t+|de|Anzahl|g=f}}
 {{trans-mid}}
 * Italian: {{t-|it|contatore|g=m}}
+* Middle English: {{tø|enm|counte}}
 * Romanian: [[numărare]] {{f}}
 * Russian: {{t+|ru|счёт|sc=Cyrl}}
 * Slovene: {{t-|sl|rezultat|m}}
