--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -30,6 +30,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 {{trans-mid}}
 * Italian: {{t-|it|contatore|g=m}}
 * Middle English: {{tø|enm|counte}}
+* [[Old French]]: {{tø|fro|conte}}
 * Romanian: [[numărare]] {{f}}
 * Russian: {{t+|ru|счёт|sc=Cyrl}}
 * Slovene: {{t-|sl|rezultat|m}}
