--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -98,6 +98,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Greek: {{t+|el|μετράω|tr=metráo|sc=Grek}}
 * Hungarian: {{t+|hu|számol}}
 {{trans-mid}}
+* [[Ido]]: {{t|io|kontar}}
 * Italian: {{t+|it|contare}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|брои|tr=brói|sc=Cyrl|xs=Macedonian}}
