--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -86,6 +86,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 =====Translations=====
 {{trans-top|to enumerate or determine number}}
 * [[American Sign Language]]: {{tø|ase|FlatF@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp FlatF@InFinger-PalmDown-FlatB@CenterChesthigh|xs=American Sign Language}}
+* Anglo-Norman: {{tø|xno|counter}}
 * Armenian: {{t-|hy|հաշվել|tr=hašvel|sc=Armn|xs=Armenian}}
 * [[Breton]]: [[kontañ]]
 * [[Classical Nahuatl]]: {{tø|nci|pōhua}}
