--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -362,6 +362,7 @@ From {{etyl|la|rm}} {{term|plumbum||lead|lang=la}}
 [[fr:plum]]
 [[io:plum]]
 [[it:plum]]
+[[ku:plum]]
 [[lo:plum]]
 [[hu:plum]]
 [[ja:plum]]
