--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -260,8 +260,9 @@
 * Czech: {{t-|cs|postupka|f}}
 * Finnish: {{t+|fi|suora}}
 * French: {{t+|fr|quinte|f}}
-* Japanese: {{t|ja|ストレート|tr=sutorēto|sc=Jpan}}
+* Hungarian: {{t|hu|sor}}
 {{trans-mid}}
+* Japanese: {{t|ja|ストレート|tr=sutorēto|sc=Jpan}}
 * Polish: {{t-|pl|strit|m}}
 * Russian: [[стрейт]] (strejt) {{m}}, [[стрит]] (strit) {{m}}
 * Swedish: {{t+|sv|stege|c}}
