--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -15,9 +15,9 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 #: ''The three U.S. states on the west coast ('''i.e.''', Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
-* Use '''i.e.''' to explain or clarify a statement by either ([[exhaustively]]) listing options or by [[rephrasing]] the previous statement.
+* '''i.e.''' is used to [[explain]] or [[clarify]] a statement by either ([[exhaustively]]) listing options or by [[rephrasing]] the previous statement.
 * Often confused with '''[[e.g.]]'''
-* American English demands a comma after '''i.e.'''; in British English comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
+* American English demands a comma after '''i.e.'''; in British English a comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
 * Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''.
 * '''ie:''' is often found in current usage, and is perhaps now considered acceptable.
 
