--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -45,6 +45,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Czech: [[hrom]] {{m}}, [[zahřmění]] {{n}}
 * Danish: {{t+|da|torden}}
 * Dutch: {{t+|nl|donder|m}}
+* Esperanto: {{t|eo|tondro}}
 * Finnish: {{t+|fi|ukkonen}}
 * French: {{t+|fr|tonnerre|m}}
 * Georgian: {{t|ka|ქუხილი|tr=kʻuxili|xs=Georgian}}
