--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -107,8 +107,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Dutch: {{t+|nl|achten}}
 * Esperanto: [[juĝi]]
 * Estonian: {{t|et|leidma}}
-{{trans-mid}}
 * Japanese: [[評決]]する (ひょうけつする, hyōketsu-suru)
+* Latin: {{t|la|arbitrare}},  {{t|la|arbitror}}
+{{trans-mid}}
 * Norwegian: {{t+|no|finne}}
 * Russian: {{t+|ru|находить|tr=naxodít'|sc=Cyrl}} {{impf}}, {{t+|ru|найти|tr=najtí|sc=Cyrl}} {{pf}}
 * Spanish: {{t-|es|determinar}}, {{t-|es|juzgar}}
