--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -142,6 +142,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * French: {{t+|fr|trouvaille|f}}
 * Hebrew: {{t|he|מציאה|f|sc=Hebr}}
 * Icelandic: {{t+|is|fundur|m}}
+* Italian: {{t|it|scoperta|f}}
 * Latin: {{t|la|inventus|m}}
 {{trans-mid}}
 * Norwegian: {{t|no|funn|n}}
