--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|ang}} ''[[crēopan]]''
+{{etyl|ang}} {{term|creopan|crēopan|lang=ang}}, cognate with Danish {{term|krybe|lang=da}}, German {{term|kriechen|lang=de}}, Norwegian {{term|krype|lang=no}}.
 
 ===Pronunciation===
 * {{enPR|krēp}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
