--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -29,11 +29,12 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 ====Translations====
 {{trans-top|person keeping records and handling clerical work}}
 * Arabic: {{t|ar|سكرتير|m|tr=sikritér|sc=Arab}},  {{t|ar|سكرتيرة|f|tr=sikritéra|sc=Arab}}
+* Bulgarian: {{t|bg|секретар|m|tr=sekretar|sc=Cyrl}},  {{t|bg|секретарка|f|tr=sekretarka|sc=Cyrl}}
 * [[Chechen]]: [[йозанча]]
 * Chinese:
 *: Mandarin: {{t|zh|秘書|sc=Hani}},  {{t|zh|秘书|tr=mìshū|sc=Hani}}
 * Croatian: {{t-|hr|tajnik|m|alt=tȃjnīk}}, {{t-|hr|tajnica|f|alt=tȃjnica}}
-* Czech: {{t-|cs|sekretářka|f}}
+* Czech: {{t-|cs|sekretářka|f}},  {{t|cs|sekretář|m}},  {{t|cs|sekretářka|f}}
 * Dutch: {{t+|nl|secretaresse|f}}
 * Esperanto: {{t-|eo|sekretario|xs=Esperanto}}
 * Finnish: {{t-|fi|sihteeri}}
@@ -50,7 +51,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Kurdish:
 *: Kurmanji: [[katib]], [[sekreter]]
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
-* Polish: [[sekretarka]] {{f}}
+* Polish: [[sekretarka]] {{f}},  {{t|pl|sekretarz|m}},  {{t|pl|sekretarka|f}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Russian: {{t|ru|секретарь|m|tr=sekretár’|sc=Cyrl}},  {{t|ru|секретарша|f|tr=sekretárša|sc=Cyrl}}
 * Spanish: {{t-|es|secretario|m}}, {{t-|es|secretaria|f}}
