--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -219,6 +219,7 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from West Germanic, from Latin {{ter
 * [[Manx]]: {{t-|gv|eeym|f|xs=Manx}}
 * [[Marathi]]: {{t-|mr|माखणे|tr=mākhaṇe|sc=Deva|xs=Marathi}}
 * Mongolian: {{Cyrl|[[цөцгийн тос]]}} (tsötsgiin tos)
+* Navajo: {{tø|nv|mandagyíiya}}
 * [[Old Church Slavonic]]: {{tø|cu|масло|n|tr=maslo|sc=Cyrs}}
 * Old English: {{t-|ang|butere|f|xs=Old English}}
 * [[Old Irish]]: {{tø|sga|imb|n}}
