--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -191,6 +191,7 @@ From the [[Francs]], a people.
 [[la:France]]
 [[lv:France]]
 [[lt:France]]
+[[li:France]]
 [[hu:France]]
 [[nl:France]]
 [[ja:France]]
