--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -52,7 +52,7 @@
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu|sc=Jpan}}, {{t+|ja|独逸|tr=Doitsu|sc=Jpan}} {{qualifier|obsolete}}
 * [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong)
-* Korean: {{t+|ja|독일|tr=Dogil|sc=Kore}}; North Korean: {{t|ja|도이췰란드|tr=Doichwillandeu|sc=Kore}}
+* Korean: {{t+|ja|독일|tr=Dogil|sc=Kore}}; North Korean: {{t|ja|도이췰란드|tr=Doichwillandeu|sc=Kore}},  {{t|ko|독일|tr=dogil|sc=Kore}}
 {{trans-mid}}
 * Latin: {{t+|la|Germania|f}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
