--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -18,12 +18,13 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 
 ====Translations====
 {{trans-top|country in Oceania}}
-* Arabic: {{Arab|[[نيوزيلاندا]]}} (Nyuzilánda) {{f}},  {{t|ar|نيوزيلاندا|f|tr=nyuzilánda|sc=Arab}}
+* Arabic: {{t|ar|نيوزيلاندا|f|tr=nyuzilánda|sc=Arab}}
 * Armenian: [[Նոր Զելանդիա]] (Nor Zelandia)
 * Bosnian: {{t-|bs|Novi Zeland|m}}
 * [[Breton]]: [[Zeland-Nevez]]
 * Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
-* Chinese: [[新西蘭]], [[新西兰]] (Xīn-Xīlán), [[紐西蘭]], [[纽西兰]] (Niǔ-Xīlán) (in Taiwan)
+* Chinese:
+*: Mandarin: {{t|zh|新西蘭|sc=Hani}},  {{t|zh|新西兰|tr=Xīn-Xīlán|sc=Hani}},  {{qualifier|Taiwan}} {{t|zh|紐西蘭|sc=Hani}},  {{t|zh|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
 * Croatian: {{t-|hr|Novi Zeland|m}}
 * Czech: {{t-|cs|Nový Zéland|m}}
 * Danish: New Zealand
@@ -34,13 +35,13 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * French: {{t+|fr|Nouvelle-Zélande|f}}
 * German: {{t+|de|Neuseeland|n}}
 * Greek: {{t+|el|Νέα Ζηλανδία|f|tr=Néa Zilandía|sc=Grek}}
-* Hebrew: [[ניו זילנד]] (niu ziland) {{f}}
+* Hebrew: {{t|he|ניו זילנד|tr=niu ziland|f|sc=Hebr}}
 * Hungarian: {{t+|hu|Új-Zéland}}
 * Indonesian: [[Selandia Baru]]
 * [[Interlingua]]: [[Nove Zelanda]]
 * Italian: {{t+|it|Nuova Zelanda|f}}
 {{trans-mid}}
-* Japanese: {{t-|ja|ニュージーランド|tr=Nyū Jīrando|sc=Jpan}}
+* Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando|sc=Jpan}}
 * [[Kalenjin]]: {{tø|kln|Nyuziland}}
 * [[Kamba]]: {{tø|kam|Nyuziland}}
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
@@ -50,8 +51,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * [[Luo]]: {{tø|luo|Niuziland}}
 * [[Macedonian]]: {{t-|mk|Нов Зеланд|m|tr=Nov Zéland|sc=Cyrl|xs=Macedonian}}
 * Maltese: New Zealand
-* Mandarin: {{t|zh|新西蘭|sc=Hani}},  {{t|zh|新西兰|tr=Xīn-Xīlán|sc=Hani}},  {{qualifier|Taiwan}} {{t|zh|紐西蘭|sc=Hani}},  {{t|zh|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
-* Maori: [[Aotearoa]], [[Niu Tireni]],  {{t|mi|Aotearoa}},  {{t|mi|Niu Tireni}}
+* Maori: {{t|mi|Aotearoa}},  {{t|mi|Niu Tireni}}
 * [[Meru]]: {{tø|mer|Nyuziland}},  {{tø|mer|Nyuziland}}
 * Norwegian: {{t+|no|New Zealand}}, {{t-|no|Ny-Zealand}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
