--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -37,7 +37,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Latin: [[safranum]]
 * Norwegian: {{t+|no|safran}}
 {{trans-mid}}
-* Persian:{{t-|fa|زعفران|tr=za,ferān|xs=Persian}}
+* Persian: {{t-|fa|زعفران|tr=za,ferān|xs=Persian}}
 * Polish: {{t+|pl|szafran|m}}, {{t+|pl|krokus|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
 * Russian: {{t+|ru|шафран|m|tr=šafrán|sc=Cyrl}}
@@ -69,7 +69,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Polish: {{t+|pl|szafran|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
 * Russian: [[шафран]] (šafrán) {{m}}
-* [[Sanskrit]]: {{t|sa|केसर|n|xs=Sanskrit}}
+* Sanskrit: {{t|sa|केसर|n|xs=Sanskrit}}
 * Serbian:
 *: Cyrillic: [[шафран#Serbian|шафран]] {{m}}
 *: Roman: [[šafran#Serbian|šafran]]
@@ -84,8 +84,8 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Hindi: [[केसरी]] (kesarī), [[केसरिया]] (kesariyā)
 * Italian: {{t+|it|zafferano|m}}
 * Persian: {{t|fa|زعفرانی|tr=za,ferāni|xs=Persian}}
-* Polish: {{t+|pl|szafran|m}}
 {{trans-mid}}
+* Polish: {{t+|pl|szafran|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
 * Russian: [[шафран]] (šafrán) {{m}}
 * Urdu: {{ur-Arab|[[کیسری]]}} (kesarī), {{ur-Arab|[[کیسریا]]}} (kesariyā)
@@ -97,8 +97,8 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * French: {{t+|fr|safran}}
 * Hindi: [[केसरी]] (kesarī), [[केसरिया]] (kesariyā)
 * Italian: {{t+|it|zafferano|m}}
-* Japanese: [[サフラン色]] (safuraniro)
 {{trans-mid}}
+* Japanese: [[サフラン色]] (safuraniro)
 * Norwegian: {{t+|no|safran}}
 * Polish: [[szafran]] {{m}}, ([[kolor]]) [[szafranowy]] {{m}}
 * Swedish: {{t+|sv|saffran}}
