--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -129,6 +129,7 @@ From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, 
 [[ru:blond]]
 [[simple:blond]]
 [[fi:blond]]
+[[ta:blond]]
 [[vi:blond]]
 [[wa:blond]]
 [[zh:blond]]
