--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -38,12 +38,12 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 {{trans-top|encounter}}
 * Arabic: {{t+|ar|وجد|tr=wájada}}
 * Armenian: {{t-|hy|գտնել|tr=gtnel}}
-* [[Basque]]: {{t|eu|aurkitu}},  {{t|eu|topatu}}
+* [[Basque]]: {{t|eu|aurkitu}}, {{t|eu|topatu}}
 * [[Breton]]: {{t+|br|kavout|xs=Breton}}
 * Chinese: [[找到]] (zhǎodào), [[發覺]], [[发觉]] (fājué), [[發現]], [[发现]] (fāxiàn)
 * [[Crimean Tatar]]: [[tapmaq]]
 * Czech: {{t-|cs|nalézt}}, {{t+|cs|najít}}
-* Danish: [[finde]], [[træffe]]
+* Danish: {{t|da|finde}}, {{t|da|træffe}}
 * Dutch: {{t+|nl|vinden}}, {{t+|nl|aantreffen}}
 * [[Egyptian]]: {{tø|egy|gm|sc=Egyp}}
 *: <hiero>gm-m</hiero>
@@ -60,23 +60,23 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Japanese: [[発見]]する (はっけんする, hakken-suru), [[見附る]], [[見つける]] ([[みつける]],mitsukeru)
 * Kurdish: {{ku-Arab|[[دیتنه‌وه‌]]}}, {{ku-Arab|[[دۆزینه‌وه‌]]}}
 * Latin: {{t-|la|invenire|alt=invenīre}}
-* Latvian: [[atrast]]
-* Lithuanian: [[surasti]]
+* Latvian: {{t|lv|atrast}}
+* Lithuanian: {{t|lt|surasti}}
 * Mongolian: {{t-|mn|олох|sc=Cyrl|xs=Mongolian}}
 * Norwegian: {{t+|no|finne}}
 * Persian: {{t|fa|يافتن|tr=yâftan|sc=fa-Arab}}
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Romanian: {{t+|ro|găsi}}
-* Russian: {{t+|ru|находить|tr=naxodít'}} {{impf}}, {{t+|ru|найти|tr=najtí}} {{pf}}
+* Russian: {{t+|ru|находить|tr=naxodít’}} {{impf}}, {{t+|ru|найти|tr=najtí}} {{pf}}
 * Slovene: {{t+|sl|najti}}
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
-* Swedish: [[finna]], [[hitta]], [[uppdaga]], [[upptäcka]], [[utröna]]
+* Swedish: {{t|sv|finna}}, {{t|sv|hitta}}, {{t|sv|uppdaga}}, {{t|sv|upptäcka}}, {{t|sv|utröna}}
 {{trans-bottom}}
 
 {{trans-top|point out}}
-* Czech: {{t+|cs|objevit}},  {{t-|cs|nalézt}}
-* Danish: [[finde]], [[udpege]]
+* Czech: {{t+|cs|objevit}}, {{t-|cs|nalézt}}
+* Danish: {{t|da|finde}}, {{t|da|udpege}}
 * Dutch: {{t+|nl|vinden}}, {{t+|nl|ontdekken}}
 * Finnish: {{t+|fi|osoittaa}}
 * Hebrew: {{t-|he|הצביע|tr=hitzbía}}
@@ -84,9 +84,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 {{trans-mid}}
 * Latin: {{t-|la|designare}}
 * Norwegian: {{t+|no|finne}}
-* Persian: {{t|fa|نماياندن|tr=namâyândan|sc=fa-Arab}}
+* Persian: {{t|fa|نمایاندن|tr=namâyândan|sc=fa-Arab}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
-* Russian: {{t|ru|выискивать|tr=vyískivat'}} {{impf}}
+* Russian: {{t|ru|выискивать|tr=vyískivat’}} {{impf}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}
 {{trans-bottom}}
 
@@ -94,15 +94,15 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Armenian: {{t-|hy|գտնել|tr=gtnel}}
 * Czech: {{t|cs|pokládat za}}
 * Danish: {{t-|da|finde}}
-* Dutch: [[vinden]], [[van mening zijn]] dat
+* Dutch: {{t|nl|vinden}}, [[van mening zijn]] dat
 * Finnish: {{t+|fi|pitää}}
 * Hebrew: {{t-|he|מצא|tr=matzá}}
 {{trans-mid}}
 * Latin: {{t-|la|decernere}}
 * Norwegian: {{t+|no|finne}}
 * Portuguese: {{t+|pt|achar}}
-* Russian: {{t+|ru|находить|tr=naxodít'}} {{impf}}, {{t+|ru|найти|tr=najtí}} {{pf}}
-* Swedish: [[finna]], [[konstatera]],
+* Russian: {{t+|ru|находить|tr=naxodít’}} {{impf}}, {{t+|ru|найти|tr=najtí}} {{pf}}
+* Swedish: {{t|sv|finna}}, {{t|sv|konstatera}}
 {{trans-bottom}}
 
 {{trans-top|determine, judge}}
