--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -145,24 +145,25 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 {{trans-bottom}}
 
 ===Derived terms===
-{{rel-top3|Terms derived from "flesh"}}
+{{rel-top3|Terms derived from the noun or verb ''flesh''}}
 * [[flesh and blood]]
 * [[flesh fly]]
 * [[flesh out]]
 * [[flesh side]]
 * [[flesh-wing]]
-{{rel-mid3}}
 * [[flesh wound]]
+{{rel-mid3}}
 * [[flesher]]
 * [[fleshing]]
 * [[fleshpot]]
 * [[fleshy]]
-{{rel-mid3}}
 * [[goose flesh]]
 * [[in the flesh]]
+{{rel-mid3}}
 * [[pound of flesh]]
 * [[press the flesh]]
 * [[proud flesh]]
+* [[way of all flesh]]
 {{rel-bottom}}
 
 ===See also===
