--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -175,6 +175,7 @@ From {{etyl|fro}} ''[[branche]]'', from [[Vulgar Latin]] ''branca'' 'paw', possi
 * Finnish: {{t+|fi|haarautua}}, {{t-|fi|haaraantua}}
 * German: {{t+|de|verzweigen}}
 {{trans-mid}}
+* Hungarian: {{t|hu|alapít}},  {{t|hu|létrehoz}}
 * Polish: {{t|pl|rozgałęziać się}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 {{trans-bottom}}
