--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -97,6 +97,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 [[fr:zenith]]
 [[io:zenith]]
 [[it:zenith]]
+[[kn:zenith]]
 [[hu:zenith]]
 [[ml:zenith]]
 [[ja:zenith]]
