--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -10,8 +10,7 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 # [[dawn]]
 # [[morning]]
 # [[day]]
-# [[actress]](*[http://blog.goo.ne.jp/kuronyan510/e/5d3e7fc9b3060705fd5b4f99a35151bd 3年B組金八先生 女形競艶] - The opinion of the actresses by Uehara Suguru
-)
+# [[actress]]
 
 ====References====
 * {{Han ref|kx=0489.030|dkj=13734|dj=0850.010|hdz=21483.010|uh=65E6|ud=26086|bh=A5B9|bd=42425}}
