--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -5,7 +5,7 @@
 {{rank|mine|wild|front|576|France|London|save|length}}
 
 ===Etymology===
-From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}}, {{etyl|la}} {{term|Francia|lang=la}}, from {{term|Franca|lang=la}}{{attention|la}}, the name of a Germanic tribe. Compare {{term|Frankish|lang=en}}
+From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}}, {{etyl|la}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a Germanic tribe. Compare {{term|Frankish|lang=en}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈfɹɑːns/}}
@@ -157,7 +157,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * {{IPA|/fʁɑ̃s/|lang=fr}}
 
 ===Etymology===
-{{etyl|fro|fr}} {{term|France|lang=fro}}, {{etyl|la|fr}} {{Francia|lang=la}}, from {{term|Franca|lang=la}}, the name of a Germanic tribe
+{{etyl|fro|fr}} {{term|France|lang=fro}}, {{etyl|la|fr}} {{Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a Germanic tribe
 
 ===Proper noun===
 {{infl|fr|proper noun|g=f}}
@@ -183,7 +183,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 ==Old French==
 
 ===Etymology===
-From {{etyl|la|fro}} {{term|Francia|lang=la}}, from {{term|Franca|lang=la}}, the name of a Germanic tribe
+From {{etyl|la|fro}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a Germanic tribe
 
 ===Proper noun===
 {{infl|fro|proper noun|g=f}}
