--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -76,6 +76,7 @@
 * Persian: {{t+|fa|آلمان|tr=Âlmân|xs=Persian}}
 * Polish: {{t+|pl|Niemcy}}
 * Portuguese: {{t+|pt|Alemanha|f}}
+* Quechua: {{t+|qu|Alimanya|f}}
 * Romanian: {{t+|ro|Germania|f}}
 * Russian: {{t+|ru|Германия|f|tr=Germánija}}
 * [[Scottish Gaelic]]: A' [[Gearmailt|Ghearmailt]] {{f}}
