--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -147,7 +147,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Korean: [[싸우다]] (ssauda)
 * Latin: {{t-|la|combattuo}}
 * Norwegian: {{t+|no|slåss}}
-* Occitan: {{t|oc|batre}}
+* [[Occitan]]: {{t|oc|batre}}
 * [[Old French]]: {{tø|fro|batre}},  {{tø|fro|cumbatre}}
 * Portuguese: {{t|pt|combater}}
 * Romanian: {{t-|ro|combate}}
