--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -64,7 +64,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Lithuanian: {{t|lt|surasti|xs=Lithuanian}}
 * Mongolian: {{t-|mn|олох|sc=Cyrl|xs=Mongolian}}
 * Norwegian: {{t+|no|finne}}
-* Persian: {{t|fa|يافتن|tr=yâftan|xs=Persian}}
+* Persian: {{t|fa|یافتن|tr=yâftan|xs=Persian}}
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Romanian: {{t+|ro|găsi}}
