--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -40,6 +40,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
 * Russian: мягкая [[ткань]] {{f}}, [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
 * [[Scottish Gaelic]]: [[feòil]] {{f}}
+* Spanish: {{t|es|carne|f}}
 * Swahili: {{t|sw|chembechembe|xs=Swahili}}
 * [[Telugu]]: [[మాంసం]] (maamsam)
 {{trans-bottom}}
