--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -75,36 +75,35 @@
 ====Translations====
 {{trans-top}}
 * [[Afrikaans]]: {{t-|af|praat|xs=Afrikaans}}
-* Arabic: {{Arab|[[تحدث]]}} (taḥáddaṯa), {{Arab|[[تكلم]]}} (takállama),  {{t|ar|تحدث|tr=taHáddatha|sc=Arab}},  {{t|ar|تكلم|tr=takállama|sc=Arab}}
+* Arabic: {{t|ar|تحدث|tr=taHáddatha|sc=Arab}},  {{t|ar|تكلم|tr=takállama|sc=Arab}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * Belarusian: {{t|be|гаварыць|tr=havarýc’|sc=Cyrl}}
 * [[Breton]]: [[komz]]
-* Bulgarian: [[говоря]] (govorja) (1, 6)
+* Bulgarian: {{t|bg|говоря|tr=govorja|sc=Cyrl}} (1, 6)
 * [[Catalan]]: [[parlar]]
-* Chinese: [[説]], [[说]] (shuō), [[説話]], [[说话]] (shuōhuà), [[講]], [[讲]] (jiǎng)
-* Croatian: {{t-|hr|govoriti}}
+* Chinese:
+*: Mandarin: {{t|zh|説|sc=Hani}},  {{t|zh|说|tr=shuō|sc=Hani}},  {{t|zh|説話|sc=Hani}},  {{t|zh|说话|tr=shuōhuà|sc=Hani}},  {{t|zh|講|sc=Hani}},  {{t|zh|讲|tr=jiǎng|sc=Hani}}
 * Czech: {{t+|cs|mluvit}}
 * Danish: [[tale#Danish|tale]] (1, 2, 3, 4, 5, 6, 7)
 * Dutch: {{t+|nl|spreken}}
 * Esperanto: {{t-|eo|paroli|xs=Esperanto}}
 * Estonian: {{t-|et|rääkima}}
-* Finnish: [[puhua]] (1, 2, 3, 4, 5, 6), [[kertoa]] (3), [[pitää puhe]] (5)
+* Finnish: {{t|fi|puhua}} (1, 2, 3, 4, 5, 6), {{t|fi|kertoa}} (3), {{t|fi|pitää puhe}} (5)
 * French: {{t+|fr|parler}}
 * German: {{t+|de|sprechen}}
 * Greek: {{t+|el|μιλώ|tr=miló}}, {{t+|el|λέω|tr=léo}}
 * [[Guaraní]]: [[ñe'ẽ]]
 * Hebrew: {{t+|he|דיבר|tr=dibér}}
-* Hindi: {{t+|hi|बोलना|xs=Hindi}},  {{t|hi|बोलना|tr=bolnā|sc=Deva}}
+* Hindi: {{t+|hi|बोलना|tr=bolnā|sc=Deva}}
 * Hungarian: {{t+|hu|beszél}}
 * Indonesian: [[bicara|berbicara]], [[pidato|berpidato]]
 * [[Interlingua]]: [[parlar]]
 * Italian: {{t+|it|parlare}}
 * Japanese: {{t+|ja|話す|tr=hanasu}}, {{t-|ja|語る|tr=kataru}}, {{t+|ja|言う|tr=iu}}
-* Korean: [[말하다]] (malhada),  {{t|ko|말하다|tr=malhada|sc=Kore}}
+* Korean: {{t|ko|말하다|tr=malhada|sc=Kore}}
 * Latin: {{t-|la|dicere}},  {{t-|la|fabulari}}
 {{trans-mid}}
 * Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
-* Mandarin: {{t|zh|説|sc=Hani}},  {{t|zh|说|tr=shuō|sc=Hani}},  {{t|zh|説話|sc=Hani}},  {{t|zh|说话|tr=shuōhuà|sc=Hani}},  {{t|zh|講|sc=Hani}},  {{t|zh|讲|tr=jiǎng|sc=Hani}}
 * [[Nahuatl]]: [[tlatoa]]
 * Norwegian: {{t+|no|snakke}}
 * [[Occitan]]: [[parlar]]
@@ -113,25 +112,26 @@
 * Portuguese: {{t+|pt|falar}}
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
 * [[Romansch]]: [[pledar]],  [[tschantschar]]
-* Russian: [[говорить]] (govorít’) {{impf}}, [[разговаривать]] (razgovárivat’) {{impf}},  {{t|ru|говорить|tr=govorít’|sc=Cyrl}},  {{t|ru|разговаривать|tr=razgovárivat’|sc=Cyrl}}
+* Russian: {{t|ru|говорить|tr=govorít’|sc=Cyrl}} {{impf}},  {{t|ru|разговаривать|tr=razgovárivat’|sc=Cyrl}} {{impf}}
 * [[Santali]]: {{tø|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
 * [[Scottish Gaelic]]: [[bruidhinn]]
+* Serbo-Croatian: {{t|sh|говорити|sc=Cyrl}},  {{t|sh|govoriti}}
 * [[Sicilian]]: {{t+|scn|parrari|xs=Sicilian}},  {{t|scn|parlari|xs=Sicilian}}
-* Slovak: [[rozprávať]], [[hovoriť]],  {{t|sk|hovoriť}},  {{t|sk|rozprávať}}
-* Slovene: [[govoriti]] (1, 2, 3, 4, 6),  {{t|sl|govoriti}}
+* Slovak: {{t|sk|hovoriť}},  {{t|sk|rozprávať}}
+* Slovene: {{t|sl|govoriti}}
 * [[Sotho]]: {{t+|st|bua|xs=Sotho}}
 * Spanish: {{t+|es|hablar}}
 * Swahili: {{t-|sw|ongea|xs=Swahili}}
 * Swedish: {{t+|sv|tala}},  {{t+|sv|prata}}
 * [[Tagalog]]: [[magsalita]]
-* Thai: {{Thai|[[พูด]]}} (pôot),  {{t|th|พูด|tr=pôot|sc=Thai}}
+* Thai: {{t|th|พูด|tr=pôot|sc=Thai}}
 * [[Tupinambá]]: [[nhe'eng]]
 * Turkish: {{t+|tr|konuşmak}}
 * Ukrainian: {{t|uk|говорити|tr=hovoryty|sc=Cyrl}},  {{t|uk|розмовляти|tr=rozmovljáty|sc=Cyrl}}
-* Urdu: {{t-|ur|بولنا|xs=Urdu}},  {{t|ur|بولنا|tr=bolnā|sc=ur-Arab}}
-* Vietnamese: [[nói]],  {{t|vi|nói}}
+* Urdu: {{t|ur|بولنا|tr=bolnā|sc=ur-Arab}}
+* Vietnamese: {{t|vi|nói}}
 * [[West Frisian]]: {{t-|fy|sprekke|xs=West Frisian}}
-* Yiddish: [[רעדן]] (redn),  {{t|yi|רעדן|tr=redn|sc=yi-Hebr}}
+* Yiddish: {{t|yi|רעדן|tr=redn|sc=yi-Hebr}}
 * [[Zulu]]: [[ukukhuluma]] (ugukuluma)
 {{trans-bottom}}
 
